format config files

--- a/datasets/TOPICC/TOPICC.config
+++ b/datasets/TOPICC/TOPICC.config
@@ -1,1 +1,9 @@
-{"global_fks": ["PudID"], "custom_fks": [], "exclude_columns": ["PudID"]}
+{
+    "global_fks": [
+        "PudID"
+    ],
+    "custom_fks": [],
+    "exclude_columns": [
+        "PudID"
+    ]
+}
