--- a/datasets/sample1/sample1.config
+++ b/datasets/sample1/sample1.config
@@ -1,1 +1,29 @@
-{"global_fks": ["customerNumber", "officeCode", "productCode", "orderNumber"], "custom_fks": [{"table_1": "employees", "table_2": "customers", "column_1": "employeeNumber", "column_2": "salesRepEmployeeNum"}, {"table_1": "orders", "table_2": "customers", "column_1": "customerNum", "column_2": "customerNumber"}, {"table_1": "products", "table_2": "productlines", "column_1": "productLine", "column_2": "ProductLine"}], "exclude_columns": []}
+{
+    "global_fks": [
+        "customerNumber",
+        "officeCode",
+        "productCode",
+        "orderNumber"
+    ],
+    "custom_fks": [
+        {
+            "table_1": "employees",
+            "table_2": "customers",
+            "column_1": "employeeNumber",
+            "column_2": "salesRepEmployeeNum"
+        },
+        {
+            "table_1": "orders",
+            "table_2": "customers",
+            "column_1": "customerNum",
+            "column_2": "customerNumber"
+        },
+        {
+            "table_1": "products",
+            "table_2": "productlines",
+            "column_1": "productLine",
+            "column_2": "ProductLine"
+        }
+    ],
+    "exclude_columns": []
+}
