config column names

--- a/datasets/sample1/sample1.config
+++ b/datasets/sample1/sample1.config
@@ -25,5 +25,14 @@
             "column_2": "ProductLine"
         }
     ],
+    "custom_column_names": {
+        "customers": {
+            "customerNumber": "Customer Number",
+            "LastName": "Last Name"
+        },
+        "orders": {
+            "customerNum": "Customer Number"
+        }
+    },
     "exclude_columns": []
 }
