--- a/datasets/TOPICC/TOPICC.config
+++ b/datasets/TOPICC/TOPICC.config
@@ -3,6 +3,16 @@
         "PudID"
     ],
     "custom_fks": [],
+    "custom_column_names": {
+        "CARDIACPROCEDURES": {
+            "siteid": "Site (Cardiac Procedures)",
+            "PrimaryProc1": "Primary Cardiac Procedure 1"
+        },
+        "CARDIACSURGERY": {
+            "siteid": "Site (Cardiac Surgery)",
+            "CardiacSurgTime": "Cardiac Surgery Time"
+        }
+    },
     "exclude_columns": [
         "PudID"
     ]
